# Small-projects-with-python

./: CITATION.bib  CITATION.cff  LICENSE  Part2.py  Part4.py  Part5.py  README.md  SECURITY.md  codemeta.json  pyproject.toml  zenodo.json
.github/: FUNDING.yml  about.yml  metadata.yml
.github/ISSUE_TEMPLATE/: bug-report-🐞.md  feature-request-✨.md
